--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,8 @@ code {
 }
 
 .medium-card {
-  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  align-items: start;
   overflow: hidden;
   background: rgb(214, 211, 211);
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
