--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@ code {
   background: rgb(214, 211, 211);
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   border-radius: 8px;
-  width: 25%;
+  width: 50%;
   float: left;
   margin: 8px;
   height: 30rem;
@@ -41,7 +41,7 @@ code {
 }
 
 #map-container {
-  height: 80%;
-  width:80%;
+  height: 100vh;
+  width:100vh;
   background-color: lightgray;
 }
