--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,4 @@
 body {
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -13,20 +12,18 @@ code {
 }
 
 .medium-card {
-  display: grid;
-  overflow: hidden;
   background: rgb(214, 211, 211);
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   border-radius: 8px;
-  width: 50%;
-  float: left;
   margin: 8px;
-  height: 30rem;
+  flex: 1;
+  overflow-y: auto;
 }
 
 .medium-card img {
   height: 200px;
   width: 100%;
+  border-radius: 8px;
   object-fit: cover;
 }
 
@@ -41,7 +38,9 @@ code {
 }
 
 #map-container {
-  height: 100vh;
-  width:100vh;
-  background-color: lightgray;
+  margin: 2px;
+  flex: 0 0  66.67%;
+  border-radius: 8px;
+  height: calc(100vh - 10px);
+  width: 100vh;
 }
